<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment">


  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="20dp"
      android:scrollbarThumbVertical="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

      <androidx.cardview.widget.CardView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:cardBackgroundColor="@color/hijauBR"
          android:layout_marginTop="75dp"
          android:elevation="15dp"
          app:cardCornerRadius="15dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/recipe_book"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"/>

      </androidx.cardview.widget.CardView>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/about_title"
          android:textColor="@color/htm1"
          android:fontFamily="@font/poppins_medium"
          android:textSize="12sp"
          android:layout_marginTop="10dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="70dp"
          android:text="@string/description_app_text"
          android:textColor="@color/hijauBR"
          android:textSize="22sp"
          android:fontFamily="@font/poppins_semi_bold"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/description_app_text_pengertian"
          android:gravity="center"
          android:textColor="@color/htm2"
          android:textSize="12sp"
          android:fontFamily="@font/poppins_medium"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/katuli_text"
          android:layout_marginTop="70dp"
          android:textColor="@color/hijauBR"
          android:fontFamily="@font/poppins_semi_bold"
          android:textSize="18sp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/anggota_text"
          android:layout_marginTop="5dp"
          android:textColor="@color/htm1"
          android:fontFamily="@font/poppins_medium"
          android:textSize="16sp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/poppins_medium"
          android:text="@string/developer_text"
          android:textAlignment="center"
          android:textColor="@color/hijauBR"
          android:textSize="14sp" />


    </LinearLayout>



  </ScrollView>


</FrameLayout>